# tryouts

./: .gitignore  .gitmodules  README.md
C#/AdslUsageData/: AdslUsageData.sln  README.md
C#/AdslUsageData/AdslUsageData/: AdslUsageData.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
C#/AdslUsageData/CsvReader/: CsvReader.csproj
C#/AdslUsageData/DynamicCSVReaderTest/: DynamicCSVReaderTest.csproj  Program.cs
C#/MurderMistery/: .gitignore  MurderMistery.sln
C#/MurderMistery/MurderMistery/: Butler.cs  Colnel.cs  Communicate.cs  Gun.cs  ICommunicate.cs  IWeapon.cs  MurderMistery.csproj  Poison.cs  Program.cs
C#/ZumoDemo/: .gitignore  ZumoDemo.sln
C#/ZumoDemo/ZumoDemo/: Global.asax  Global.asax.cs  Web.config  ZumoDemo.csproj
dropwizard/BlogService/: configuration.yml  dependency-reduced-pom.xml  pom.xml
famo.us/pGallery/: README.md  bower.json  package.json
famo.us/pGallery/app/: index.html
famo.us/pGallery/grunt/: connect.js
javafx/samples/: README.md
jekyll/katha-varta/: 404.html  README.md  _config.yml  index.html  sitemap.txt  tags.html
nashorn/: Program.java
nashorn/samples/: Program.java  greeting.js
nashorn/slate/: README.md  slate.js
node-webkit/helloworld/: README.md  README.md~  app.nw
play/chirpy/: README.md  build.sbt
play/todolist/: README.md
rust/bunny-cli/: Cargo.toml  bunny.txt
rust/flyio-sample-app/: Cargo.toml  Dockerfile  README.md  fly.toml
rust/flyio-sample-app/src/: main.rs
rust/xmas-tree/: Cargo.toml  win.sh
rust/xmas-tree-nix/: Cargo.toml
rust/xmas-tree/src/: fields.rs  main.rs
(+117 files in other folders)
