[package]
name = "heya"
version = "0.1.0"
edition = "2021"
authors = ["Saumil Patel <saumil@nomail.com"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
warp = "0.3.6"
tokio = {version = "1", features = ["full"]}
